# python-project-lvl2

./: Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: __init__.py  args_parser.py  loader.py
gendiff/comparator/: __init__.py  comparator.py  constants.py
gendiff/exceptions/: GendiffFileError.py  loader_exception.py
gendiff/formaters/: formater.py
gendiff/scripts/: __init__.py  main.py
tests/: __init__.py  test_loader.py
tests/fixtures/: wrong_extension.txt  wrong_json_file.json  wrong_yaml_file.yaml
